src/objects/StagingToTableMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting used to Map fields from the MBA Staging tables to the main tables.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to determine if this record is currently active for mapping</description>
        <inlineHelpText>Used to determine if this record is currently active for mapping</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Field_Name_API__c</fullName>
        <description>The API Name of the field for the object to map the staging object field to</description>
        <inlineHelpText>The API Name of the field for the object to map the staging object field to</inlineHelpText>
        <label>Object Field Name (API)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name_API__c</fullName>
        <description>The API Name of the object to map the staging object to</description>
        <inlineHelpText>The API Name of the object to map the staging object to</inlineHelpText>
        <label>Object Name (API)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Object_Field_Name_API__c</fullName>
        <description>The API name of the field from the staging object</description>
        <inlineHelpText>The API name of the field from the staging object</inlineHelpText>
        <label>Staging Object Field Name (API)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Object_Name_API__c</fullName>
        <description>The API name of the staging object holding the field</description>
        <inlineHelpText>The API name of the staging object holding the field</inlineHelpText>
        <label>Staging Object Name (API)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>StagingToTableMapping</label>
</CustomObject>